<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Chart"
        android:background="@drawable/background">

    <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="391dp"
            android:layout_height="352dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.849"
            app:layout_constraintBottom_toTopOf="@+id/btnWednesday"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnSaturday"
            android:backgroundTint="#636363"
            android:text="@string/sab"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnFriday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnSunday"
            android:backgroundTint="#636363"
            android:text="@string/dom"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnSave"
            android:backgroundTint="#636363"
            android:text="@string/save"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="328dp"
            android:layout_marginBottom="140dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnMonday"
            android:backgroundTint="#636363"
            android:text="@string/seg"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnSunday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnTuesday"
            android:backgroundTint="#636363"
            android:text="@string/ter"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnMonday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnWednesday"
            android:backgroundTint="#636363"
            android:text="@string/qua"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnTuesday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnThursday"
            android:backgroundTint="#636363"
            android:text="@string/qui"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnWednesday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="28dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/btnFriday"
            android:backgroundTint="#636363"
            android:text="@string/sex"
            android:textColor="#E0E0E0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnThursday"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="196dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"/>

    <TextView
            android:text="@string/dia_selecionado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectedDayText"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="144dp"/>


    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectedDay"
            android:textSize="20sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toEndOf="@+id/selectedDayText"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="144dp"/>

    <TextView
            android:text="@string/produto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product"
            android:textSize="23sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="88dp"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:id="@+id/productInput"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#FFFFFFFF"
            app:boxStrokeColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="84dp"
            app:layout_constraintStart_toEndOf="@+id/product"
            android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/pre_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:textSize="23sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"/>

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:id="@+id/productPriceInput"
            android:inputType="number"
            android:textColor="#FFFFFFFF"
            android:textColorHint="#FFFFFFFF"
            app:boxStrokeColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="28dp"
            app:layout_constraintStart_toEndOf="@+id/price"
            android:layout_marginStart="16dp"/>

    <Button
            android:text="@string/total"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:id="@+id/btnTotal"
            android:backgroundTint="#636363"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="116dp"/>

    <Button
            android:text="@string/logout"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:id="@+id/btnLogout"
            android:backgroundTint="#636363"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="12dp"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/helloName"
            android:textSize="24sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="46dp"
            app:layout_constraintStart_toEndOf="@+id/ola"
            android:layout_marginStart="4dp"/>

    <TextView
            android:text="@string/ola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ola"
            android:textSize="24sp"
            android:textColor="#FFFFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="46dp"
            android:layout_marginStart="12dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>